# contract-bound-autonomy

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py  routes_approvals.py  routes_auth.py  routes_contracts.py  routes_health.py  routes_incidents.py  routes_knowledge.py
apps/ui/: package-lock.json  package.json  vite.config.ts
apps/worker/: __init__.py  checkpointer.py  context.py  queue.py  worker.py
core/: config.py  enums.py  models.py  ports.py
core/agents/: __init__.py  investigation.py  planner.py  policy.py  summary.py
core/audit/: audit.py
core/budget/: __init__.py  accountant.py  models.py
core/compliance/: __init__.py  evaluator.py  models.py
core/contracts/: __init__.py  adaptive.py  contracts.py
core/events/: __init__.py  bus.py  redis_bus.py
core/execution/: __init__.py  client.py  server.py  tools.py
core/guardrails/: __init__.py  engine.py  risk.py  validators.py
core/identity/: deps.py  security.py  service.py
core/knowledge/: __init__.py  graph.py  ingestion.py  metadata.py  retriever.py  startup.py
core/llm/: __init__.py  factory.py
core/memory/: models.py  store.py
core/observability/: __init__.py  langsmith.py
core/orchestration/: builder.py  nodes.py  orchestrator.py  routing.py  state.py
core/persistence/: __init__.py  database.py  orm.py
core/trust/: manager.py  models.py
docs/: 01-vision-and-requirements.md  02-architecture.md  03-domain-model.md  04-roadmap.md  ADOPTION.md  README.md  USE-CASE.md  interview-ai-stack.md  interview-react.md
knowledge/: topology.json
knowledge/architecture/: inventory-service-architecture.md
knowledge/contracts/: inventory-service-contract.json
knowledge/incidents/: incident-2026-001.md
knowledge/runbooks/: inventory-service-connection-pool-runbook.md
migrations/: env.py
tests/: __init__.py  conftest.py
tests/api/: test_api_auth_rbac.py
tests/unit/: test_adaptive_contracts.py  test_auth.py  test_budget_engine.py  test_compliance.py  (+6 more)
(+28 files in other folders)
