[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-bound-autonomy"
version = "0.1.0"
description = "Contract-Bound Autonomous Remediation Orchestrator — AI-powered incident remediation with hard operational boundaries"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi[standard]>=0.115.0,<1.0",
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",
    "langchain>=0.3.0,<2.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-community>=0.3.0,<1.0",
    "langchain-text-splitters>=0.3.0,<1.0",
    "langgraph>=0.2.0,<2.0",
    "langgraph-checkpoint-postgres>=3.0.0,<4.0",
    "langsmith>=0.1.0,<1.0",
    "langchain-openai>=0.2.0,<2.0",
    "langchain-anthropic>=0.3.0,<1.0",
    "langchain-google-genai>=2.0.0,<3.0",
    "langchain-chroma>=0.1.0,<1.0",
    "chromadb>=0.5.0,<2.0",
    "neo4j>=5.20.0,<7.0",
    # --- Persistence ---
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.29.0",
    "psycopg[binary,pool]>=3.2.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    # --- Queue / cache / events ---
    "redis>=5.0.0,<7.0",
    "arq>=0.26.0",
    # --- Auth ---
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    # --- Execution ---
    "kubernetes>=30.1.0",
    # --- Hardening / ops ---
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
]

[tool.setuptools.packages.find]
include = ["core*", "apps*", "examples*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "fakeredis>=2.23.0",
    "mypy>=1.10",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
